multicluster-config/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  namespace: default
  name: thanos-query-envoy-config
data:
  envoy.yaml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
  
    static_resources:
      listeners:
      - name: envoy-sidecar
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10001
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
                  log_format:
                    text_format: |
                      [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                      %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION%
                      %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%"
                      "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" "%UPSTREAM_TRANSPORT_FAILURE_REASON%"\n                  
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: envoy-sidecar
                      retry_policy:
                        retry_on: 5xx
                        num_retries: 10
                      host_rewrite_literal: query-workload.dnation.cloud:32443
              http_filters:
              - name: envoy.filters.http.router
      clusters:
      - name: envoy-sidecar
        connect_timeout: 30s
        type: LOGICAL_DNS
        http2_protocol_options: {}
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: envoy-sidecar
          endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: query-workload.dnation.cloud
                      port_value: 32443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: /certs/tls.crt
                  private_key:
                    filename: /certs/tls.key
              validation_context:
                trusted_ca:
                  filename: /certs/ca.crt
              alpn_protocols:
              - h2
            sni: query-workload.dnation.cloud
